[FIX] web_editor: summernote toolbar actions not auto wraped on mobile
Before this commit on the mobile screen, summer notes toolbar actions are not
wrapped to the new line and break the screen with horizontal scroll overflow to
screen.

Now, Toolbars actions are wrapped to a new line when on a mobile screen.

task-1971430

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -36,6 +36,13 @@
     height: $o-wysiwyg-toolbar-height;
 }
 
+@include media-breakpoint-down(sm) {
+    .note-editor .note-toolbar {
+        white-space: normal;
+        height: auto;
+    }
+}
+
 .note-popover.popover .popover-content,
 .note-editor .note-toolbar {
     font-family: $o-wysiwyg-font-family;
